--- a/foodLocweb/css/style.css
+++ b/foodLocweb/css/style.css
@@ -3,3 +3,18 @@ body{
     background-size: cover;
 }
 
+/**footer style**/
+ul.contact{
+    margin: 0;
+    padding: 2em 0em 0em 0em;
+    list-style: none;
+}
+
+ul.contact li{
+    display: inline-block;
+    padding: 0em 0.10em;
+    font-size: 1em;
+}
+
+
+
