--- a/foodLocweb/css/style.css
+++ b/foodLocweb/css/style.css
@@ -4,6 +4,7 @@ body{
 }
 
 /**footer style**/
+
 ul.contact{
     margin: 0;
     padding: 2em 0em 0em 0em;
@@ -11,10 +12,16 @@ ul.contact{
 }
 
 ul.contact li{
+    padding-top: 100px;
     display: inline-block;
     padding: 0em 0.10em;
     font-size: 1em;
 }
 
-
+.container {
+    border-radius:25px;
+}
+.btn{
+    border-radius:20px;
+}
 
